# GPGPU-labs

./: .gitignore
converter/: .gitignore  README.md  pyproject.toml
converter/src/converter/: __init__.py  cli.py  converter.py
cp/: Makefile  raytracing.cu
cp/input/: config1  config2  config3  config4  config5  test  test_small
hw1/: hw1.cpp
hw2/: hw2.cpp
lab1/: Makefile  lab1.cu  lab1.h  lab1_bench.cu  lab1_main.cu  lab1_no_cuda.cpp
lab2/: Makefile  benchmark.cu  generate_test_images.cpp  lab2.cu  prewitt_cpu.cpp  prewitt_cpu.h  prewitt_kernel.cu  prewitt_kernel.h  run_benchmark.sh
lab2/input/: out.data  out1.data  test  test1  test2  tree-res.data  tree.data
lab3/: Makefile  benchmark.cu  generate_test_images.cpp  image_utils.cpp  image_utils.h  lab3.cu  min_distance_cpu.cpp  min_distance_cpu.h  min_distance_kernel.cu  min_distance_kernel.h  run_benchmark.sh
lab3/input/: h-res.data  h.data  test  test1  test2
lab4/: Makefile  lab4.cu  lab4_benchmark.cu  lab4_cpu.cpp  matrix_generator.cpp  matrix_generator.h  run_benchmark.sh
lab4/benchmark_results/: cpu_10.txt  cpu_100.txt  cpu_1000.txt  cpu_2000.txt  nvprof_1000_16_16_16.txt  nvprof_1000_16_32_32.txt  nvprof_1000_16_8_8.txt  nvprof_1000_1_1_1.txt  nvprof_1000_1_32_1.txt  nvprof_1000_32_16_16.txt  nvprof_1000_32_32_32.txt  nvprof_1000_32_64_32.txt  (+26 more)
utils/: csc.h
visualization/: .gitignore  README.md  example_usage.py  pyproject.toml
visualization/scripts/: __init__.py  visualize.py
visualization/src/visualization/: __init__.py  camera.py  config_reader.py  geometry.py  visualizer.py
(+1 files in other folders)
